# state_control

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  mainpage.dox  manifest.xml
config/: params_template.yaml  vision_gains.yaml
include/: trajectory.h
src/: state_control.cpp  trajectory.cpp
